todo: fix header alignment

--- a/Bonus/css-bonus-challenges/2_moderate/css/bonus-blog.css
+++ b/Bonus/css-bonus-challenges/2_moderate/css/bonus-blog.css
@@ -11,24 +11,34 @@
 
 body {
     background-color: #f1f1f1;
+    margin: 0 auto;
+
 }
 
-img.workshop{
+/*header {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    justify-content: flex-end;*/
+/*}*/
+
+img.workshop {
     width: 10%;
-    height:10%;
+    height: 10%;
 }
 
-.lorem-nextline{
+.lorem-nextline {
     clear: both;
     display: inline-block;
     width: 100%;
 }
+
 .top-welcome-message {
     margin-bottom: 30px;
+
 }
 
 .card {
-    width: 250px;
+    /*width: 250px;*/
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin: 0 auto;
 }
@@ -46,11 +56,11 @@ p.card-message {
     width: 120px;
 }
 
-.comments{
+.comments {
     font-size: 0.8em;
 }
 
-.about-me{
+.about-me {
     font-size: 0.8em;
 }
 
@@ -65,20 +75,42 @@ p.card-message {
     border-radius: 50%;
 }
 
-.img{
+.img {
     float: left;
-    margin-right:1rem;
+    margin-right: 1rem;
     height: 50px;
     width: 50px;
 }
 
-.list-lines{
-    overflow:auto;/* without overflow here, if the "Line 1" and "Line 2" is short then "Next elements" will display below "Line 2" and the image will cover the "Next elements"*/
+.list-lines {
+    overflow: auto; /* without overflow here, if the "Line 1" and "Line 2" is short then "Next elements" will display below "Line 2" and the image will cover the "Next elements"*/
 }
-.two-lines{
+
+.two-lines {
     float: left; /*without float here, if "Line 1" and "Line 2" is long -> text will display both at right and bottom the image*/
 }
 
-.second-line-font-size{
+.second-line-font-size {
     font-size: 0.8em;
+}
+
+.btn-tags {
+    display: table;
+    width: auto;
+    text-align: center;
+    padding: 1px;
+    margin: 1px;
+    background-color: #f1f1f1;
+}
+
+.tags-bottom-page {
+    /*overflow:auto;*/
+    display: flex;
+
+}
+
+.btn-tags:hover {
+    color: white;
+    background-color: black;
+
 }
